--- a/KlasseListeApp/MainPage.xaml
+++ b/KlasseListeApp/MainPage.xaml
@@ -1,13 +1,18 @@
 ﻿<Page
-    x:Class="KlasseListeApp.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:KlasseListeApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:KlasseListeApp.ViewModel"
+    x:Class="KlasseListeApp.MainPage"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.DataContext>
+        <ViewModel:KlasseViewModel/>
+    </Page.DataContext>
 
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="555" Margin="82,84,0,0" VerticalAlignment="Top" Width="443" ItemsSource="{Binding KListe}"/>
     </Grid>
 </Page>
